--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
 </head>
 <body>
     <div class="container">
+        <img id="logo" src="nailsandglam.jpg" alt="Logo" class="mx-auto mb-6 w-full max-w-xs h-auto" style="max-width: 14rem;">
+
         <h1 class="text-3xl font-bold text-center text-gray-800 mb-8">Formulario Informativo de Cliente</h1>
 
         <div id="messageBox" class="message-box hidden">
