Update email address in message box for PDF submission instructions

--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
         <img id="logo" src="nailsandglam.jpg" alt="Logo" class="mx-auto mb-6 w-full max-w-xs h-auto" style="max-width: 14rem;">
 
         <h1 class="text-3xl font-bold text-center text-gray-800 mb-8">Formulario Informativo de Cliente</h1>
-
+        
         <div id="messageBox" class="message-box hidden">
             <p class="font-semibold">Información Importante:</p>
-            <p class="mt-2">El PDF se generará y se descargará en tu dispositivo. Luego, deberás enviarlo como adjunto al correo electrónico <a href="mailto:yo@mail.com" class="text-blue-600 underline">yo@mail.com</a></p>
+            <p class="mt-2">El PDF se generará y se descargará en tu dispositivo. Luego, deberás enviarlo como adjunto al correo electrónico <a href="nailsglambyyarys@gmail.com" class="text-blue-600 underline">nailsglambyyarys@gmail.com</a></p>
         </div>
 
         <form id="surveyForm" class="space-y-6 mt-6">
