--- a/index.html
+++ b/index.html
@@ -403,6 +403,12 @@
             doc.setFontSize(20);
             doc.text('Formulario Informativo de Cliente', 105, 15, { align: 'center' });
 
+            // Agregar fecha actual debajo del título
+            doc.setFont('helvetica', 'normal');
+            doc.setFontSize(11);
+            const fechaActual = new Date().toLocaleDateString('es-ES');
+            doc.text(`Fecha: ${fechaActual}`, 20, 23);
+
             // Set font and size for content
             doc.setFont('helvetica', 'normal');
             doc.setFontSize(10);
